apply authentication and authorization in project